{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 208,
  "lineage": "f060657c-d0b0-fe24-6e76-88b6cbecddcc",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:704048935372:targetgroup/tracedataai-uat-tg/5dbf7e51f450d0dc",
            "arn_suffix": "targetgroup/tracedataai-uat-tg/5dbf7e51f450d0dc",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:704048935372:targetgroup/tracedataai-uat-tg/5dbf7e51f450d0dc",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:704048935372:loadbalancer/app/tracedataai-uat-alb/8dca6ad71bf0861c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tracedataai-uat-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-tg",
              "Project": "TraceDataAI"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-tg",
              "Project": "TraceDataAI"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-01d9095da7596101b"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:704048935372:targetgroup/tracedataai-uat-tg/5dbf7e51f450d0dc"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:704048935372:security-group/sg-058b5602badde7151",
            "description": "Internal ALB SG - allow HTTP from VPC CIDR only",
            "egress": [
              {
                "cidr_blocks": [
                  "11.0.0.0/16"
                ],
                "description": "All traffic to VPC CIDR",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058b5602badde7151",
            "ingress": [
              {
                "cidr_blocks": [
                  "11.0.0.0/16"
                ],
                "description": "HTTP from VPC CIDR",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "Allow HTTP from VPC Link SG",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0585689778f8ad003"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "TraceDataAI-uat-alb-sg",
            "name_prefix": "",
            "owner_id": "704048935372",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-alb-sg",
              "Project": "TraceDataAI"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-alb-sg",
              "Project": "TraceDataAI"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d9095da7596101b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "704048935372",
            "id": "sg-058b5602badde7151",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.api_gateway",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:704048935372:security-group/sg-0b6ca7913905b43b6",
            "description": "Backend compute SG - allow HTTP from ALB SG only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6ca7913905b43b6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "All TCP from ALB SG (dynamic port mapping)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-058b5602badde7151"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "TraceDataAI-uat-backend-sg",
            "name_prefix": "",
            "owner_id": "704048935372",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-backend-sg",
              "Project": "TraceDataAI"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-backend-sg",
              "Project": "TraceDataAI"
            },
            "timeouts": null,
            "vpc_id": "vpc-01d9095da7596101b"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "704048935372",
            "id": "sg-0b6ca7913905b43b6",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.alb.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:704048935372:subnet/subnet-0c65c913cd85f8b9e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "11.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c65c913cd85f8b9e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704048935372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-private-subnet-1",
              "Project": "TraceDataAI",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-private-subnet-1",
              "Project": "TraceDataAI",
              "Tier": "Private"
            },
            "vpc_id": "vpc-01d9095da7596101b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "704048935372",
            "id": "subnet-0c65c913cd85f8b9e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:704048935372:subnet/subnet-0b5e3f37fb64fb1c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "11.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b5e3f37fb64fb1c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "704048935372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-private-subnet-2",
              "Project": "TraceDataAI",
              "Tier": "Private"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-private-subnet-2",
              "Project": "TraceDataAI",
              "Tier": "Private"
            },
            "vpc_id": "vpc-01d9095da7596101b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "704048935372",
            "id": "subnet-0b5e3f37fb64fb1c9",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:704048935372:vpc/vpc-01d9095da7596101b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "11.0.0.0/16",
            "default_network_acl_id": "acl-059870829ce7f0d61",
            "default_route_table_id": "rtb-0dea3569f5b2133bc",
            "default_security_group_id": "sg-08f43b80ec31d8c73",
            "dhcp_options_id": "dopt-017ddd9d04ac2a47a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01d9095da7596101b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dea3569f5b2133bc",
            "owner_id": "704048935372",
            "region": "ap-south-1",
            "tags": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-vpc",
              "Project": "TraceDataAI"
            },
            "tags_all": {
              "Environment": "uat",
              "ManagedBy": "Terraform",
              "Name": "TraceDataAI-uat-vpc",
              "Project": "TraceDataAI"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "704048935372",
            "id": "vpc-01d9095da7596101b",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}